# linny-chess

./: .gitignore  README.md
frontend/: .gitignore  .prettierrc  package.json  pnpm-lock.yaml  server.ts  socketInjector.ts  vite.config.ts
frontend/src/lib/server/: socket.ts
frontend/src/routes/: +page.svelte
rust/: Cargo.toml  rust-toolchain.toml
rust/src/: board.rs  board_util.rs  main.rs  piece.rs  util.rs
rust/src/attributes/: castle.rs  enpassant.rs  jumping.rs  main.rs  mod.rs  sliding.rs
