[package]
name = "linnychess"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bit-vec = "0.6.3"
colored = "2.0.0"
enum_dispatch = "0.3.11"
ordinal = "0.3.2"
rustc-hash = "1.1.0"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.95"
wasm-bindgen = "0.2.84"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/main.rs"

[features]
server = []

[package.metadata.commands]
"build:dev" = "wasm-pack build --target web --dev --out-dir ../frontend/pkg/ --features server"
watch = "cargo watch -x 'cmd build:dev'"
